syntax = "proto3";
package proxy.rpc;
option go_package = "github.com/f110/lagrangian-proxy/pkg/server/rpc";

service Cluster {
    rpc MemberList(RequestMemberList) returns (ResponseMemberList) {}
    rpc MemberStat(RequestMemberStat) returns (ResponseMemberStat) {}
}

service Admin {
    rpc Ping(RequestPing) returns (ResponsePong);

    rpc UserList(RequestUserList) returns (ResponseUserList);
    rpc UserAdd(RequestUserAdd) returns (ResponseUserAdd);
    rpc UserDel(RequestUserDel) returns (ResponseUserDel);

    rpc RoleList(RequestRoleList) returns (ResponseRoleList);
}

message RequestPing {}

message ResponsePong {}

message RequestMemberList {}

message ResponseMemberList {
    repeated ClusterMember items = 1;
}

message RequestMemberStat {}

message ResponseMemberStat {
    string id = 1;
    int32 user_count = 2;
    int32 token_count = 3;
    repeated string listened_relay_addrs = 4;
}

message ClusterMember {
    string id = 1;
}

message UserItem {
    string id = 1;
    repeated string roles = 2;
}

message RoleItem {
    string name = 1;
    string title = 2;
    string description = 3;
}

message RequestUserList {
    string role = 1;
}

message ResponseUserList {
    repeated UserItem items = 1;
}

message RequestUserAdd {
    string id = 1;
    string role = 2;
}

message ResponseUserAdd {
    bool ok = 1;
}

message RequestUserDel {
    string id = 1;
    string role = 2;
}

message ResponseUserDel {
    bool ok = 1;
}

message RequestRoleList {}

message ResponseRoleList {
    repeated RoleItem items = 1;
}

message ErrorUnauthorized {
    string endpoint = 1;
}